--- a/css/s_style.css
+++ b/css/s_style.css
@@ -8,18 +8,31 @@ body {
     padding: 10px;
     background: #f1f1f1;
 }
+/* Header/logo Title */
 .header {
-    padding: 30px;
-    text-align: center;
-    background: white;
+    display: flex;
+    background: #1abc9c;
+    color: white;
+    background-image: url(/html/p1/Project-Website/images/digital.jpg);
+    
 }
 
-.header h1 {
-    font-size: 50px
-}
 
+h1 {
+    padding: 20px;
+    font-size: 80px
+    
+}
+.div_header{
+    display: flex;
+    
+}
+.div_header span{
+    padding: 80px;
+    
+}
 .topnav {
-    flex: 1;
+    display: flex;
     overflow: hidden;
     background-color: #333;
     align-items: flex-end;
@@ -29,7 +42,7 @@ body {
 }
 
 .topnav a {
-    flex-direction: row;
+    
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
