--- a/css/style.css
+++ b/css/style.css
@@ -10,25 +10,26 @@ body {
     background: #f1f1f1;
 }
 
-.header {
-    padding: 30px;
-    text-align: center;
-    background: white;
-}
 
+.header {
+    display: flex;
+    background: #1abc9c;
+    color: white;
+    background-image: url("/images/digital.jpg");
+    
+}
 .header h1 {
     font-size: 50px
 }
 
 .topnav {
-    flex: 1;
+    display: flex;
     overflow: hidden;
     background-color: #333;
+    align-items: flex-end;
 }
-
 .topnav a {
-    float: left;
-    display: block;
+    
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
@@ -38,6 +39,21 @@ body {
 .topnav a:hover {
     background-color: #ddd;
     color: black;
+}
+.div_header{
+    text-align: center;
+    display: flex;
+    color: black;
+}
+.div_header span{       
+   padding: 80px;
+   font-size: 30px;
+    
+}
+.fakeimg {
+    background-color: #aaa;
+    width: 100%;
+    padding: 20px;
 }
 
 .leftcolumn {
@@ -137,8 +153,9 @@ body {
 }
 
 #teamimage1 {
-    width: 40%;
-    border-radius: 10px;
+    width: 80%;
+    height: 300px;
+    border-radius: 30px;
 }
 
 #business {
@@ -178,7 +195,33 @@ body {
     font-size: 20px;
 }
 
-
+.footer {
+    height: 300px;
+    padding: 20px;
+    text-align: center;
+    background: #ddd;
+ 
+}
+ul{
+    list-style-type: none;
+}
+.socialmedia{
+ width: 70%;
+ height: 200%;
+}
+li{
+   font-size: 30px;
+   margin-left: 30px;
+   float: left;
+}
+#cr{
+    font-size: 20px;
+    float: right; 
+}
+span{
+    content:"\00A9";
+    text-decoration: underline;
+}
 @media (max-width: 800px) {
     .leftcolumn {
         width: 100%;
