--- a/css/form.css
+++ b/css/form.css
@@ -5,7 +5,7 @@
   display: flex;
   background: #1abc9c;
   color: white;
-  background-image: url("/images/digital.jpg");
+  background-image: url("images/digital.jpg");
   
 }
 .header h1 {
@@ -32,7 +32,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    background-image: url("/images/coden.jpg");
+    background-image: url("images/coden.jpg");
   
   }
   
