--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     background: #1abc9c;
     color: white;
-    background-image: url("/images/digital.jpg");
+    background-image: url("images/digital.jpg");
     
 }
 .header h1 {
