--- a/css/s_style.css
+++ b/css/s_style.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     background: #1abc9c;
     color: white;
-    background-image: url("images/digital.jpg");
+    background-image: url("../images/digital.jpg");
     
 }
 .header h1 {
