--- a/css/project.css
+++ b/css/project.css
@@ -20,7 +20,7 @@ body{
     display: flex;
     background: #1abc9c;
     color: white;
-    background-image: url("images/digital.jpg");
+    background-image: url("../images/digital.jpg");
 
     
 }
