--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     background: #1abc9c;
     color: white;
-    background-image: url("images/digital.jpg");
+    background-image: url("../images/digital.jpg");
     
 }
 .header h1 {
@@ -242,7 +242,7 @@ span{
     .ptag {
         font-size: smaller;
     }
-
+}
     @media screen and (max-width: 400px) {
         .topnav a {
             float: none;
