--- a/css/form.css
+++ b/css/form.css
@@ -32,7 +32,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    background-image: url("images/coden.jpg");
+    background-image: url("../images/coden.jpg");
   
   }
   
