--- a/css/project.css
+++ b/css/project.css
@@ -5,16 +5,6 @@
     box-sizing: border-box;
     
 }
-body{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding-top: 2em;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: blanchedalmond;
-
-    
-}
 
 .header {
     display: flex;
@@ -57,11 +47,14 @@ body{
     
 }
 .unserteam{
+    display: flex;
+    flex-direction: column;
+    
     padding: 2em;
     max-width: 40em;
     border-radius: .25em;
     background-color: cornsilk;
-    margin: 1px 1px 10px 1px;
+    margin-left: 25%;
    
 
 }
@@ -126,4 +119,4 @@ h1{
 }
 
 
-@media (max-width:400px;)
+@media (max-width:400px){}
