--- a/css/form.css
+++ b/css/form.css
@@ -1,24 +1,30 @@
-*{
+* {
   margin: 0;
 }
+
 .header {
   display: flex;
   background: #1abc9c;
   color: white;
   background-image: url("../images/digital.jpg");
-  
+
 }
+
 .header h1 {
   font-size: 50px
 }
+
 .topnav {
   display: flex;
+  position: sticky;
+  top: 0;
   overflow: hidden;
   background-color: #333;
   align-items: flex-end;
 }
+
 .topnav a {
-  
+
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -29,68 +35,70 @@
   background-color: #ddd;
   color: black;
 }
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
-    background-image: url("../images/coden.jpg");
-  
-  }
-  
-  input[type="text"],
-  input[type="tel"],
-  input[type="email"],
-  select,
-  button,
-  textarea {
-    width: 100%;
-    border-radius: 5px;
-    height: 35px;
-    border: 1px solid black;
-    resize: vertical;
-    min-height: 35px;
-    max-height: 200px;
-    background-color: beige;
-  }
-  
-  form {
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 40px;
-    background-color:cadetblue;
-    border-radius:30px;
-  }
-  
-  .form-row {
-    margin-bottom: 30px;
-  
-  }
-  
-  .form-row label {
-    display: block;
-    margin-bottom: 6px;
-    
-  }
-  
-  
-  
-  
-  button {
-    display: inline-block;
-    width: auto;
-    border: 0;
-    background-color: #eee;
-    
-  }
-  
-  button[type="submit"] {
-    background-color: rgb(68, 176, 255)
-  }
-  #asd{
-    color:whitesmoke;
-    text-align: center;
-    font-size: 26px;
-    width:auto;
-    block-size: initial;
-    position: relative;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+  background-image: url("../images/coden.jpg");
+
+}
+
+input[type="text"],
+input[type="tel"],
+input[type="email"],
+select,
+button,
+textarea {
+  width: 100%;
+  border-radius: 5px;
+  height: 35px;
+  border: 1px solid black;
+  resize: vertical;
+  min-height: 35px;
+  max-height: 200px;
+  background-color: beige;
+}
+
+form {
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px;
+  background-color: cadetblue;
+  border-radius: 30px;
+}
+
+.form-row {
+  margin-bottom: 30px;
+
+}
+
+.form-row label {
+  display: block;
+  margin-bottom: 6px;
+
+}
+
+
+
+
+button {
+  display: inline-block;
+  width: auto;
+  border: 0;
+  background-color: #eee;
+
+}
+
+button[type="submit"] {
+  background-color: rgb(68, 176, 255)
+}
+
+#asd {
+  color: whitesmoke;
+  text-align: center;
+  font-size: 26px;
+  width: auto;
+  block-size: initial;
+  position: relative;
+}
