--- a/css/s_style.css
+++ b/css/s_style.css
@@ -3,67 +3,38 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     font-family: Arial;
     padding: 10px;
     background: #f1f1f1;
 }
+
 /* Header/logo Title */
 .header {
     display: flex;
     background: #1abc9c;
     color: white;
     background-image: url("../images/digital.jpg");
-    
+
 }
+
 .header h1 {
     font-size: 50px
 }
 
-.topnav {
-    flex: 1;
-    overflow: hidden;
-    background-color: #333;
-}
+
 .topnav {
     display: flex;
+    position: sticky;
+    top: 0;
     overflow: hidden;
     background-color: #333;
     align-items: flex-end;
 }
-.topnav a {
-    
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-.div_header{
-    text-align: center;
-    display: flex;
-    color: black;
-}
-.div_header span{       
-   padding: 80px;
-   font-size: 30px;
-    
-.topnav {
-    display: flex;
-    overflow: hidden;
-    background-color: #333;
-    align-items: flex-end;
-}
-#about{
-   float: right;
-}
 
 .topnav a {
-    
+
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
@@ -75,59 +46,95 @@ body {
     color: black;
 }
 
-.leftcolumn {
-    float: left;
-    width: 75%;
-}
-
-.rightcolumn {
-    float: left;
-    width: 25%;
-    background-color: #f1f1f1;
-    padding-left: 20px;
-}
-
-.fakeimg {
-    background-color: #aaa;
-    width: 100%;
-    padding: 20px;
-}
-
-.card {
-    background-color: white;
-    padding: 20px;
-    margin-top: 20px;
-}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-    
-}
-
-.footer {
-    padding: 20px;
+.div_header {
     text-align: center;
-    background: #ddd;
-    margin-top: 20px;
+    display: flex;
+    color: black;
 }
 
-@media (max-width: 800px) {
-    .about1 {
-        width: 100%;
+.div_header span {
+    padding: 80px;
+    font-size: 30px;
+
+    .topnav {
+        display: flex;
+        overflow: hidden;
+        background-color: #333;
+        align-items: flex-end;
     }
 
-@media screen and (max-width: 800px) {
-    .leftcolumn, .rightcolumn {
-        width: 100%;
-        padding: 0;
+    #about {
+        float: right;
     }
-}
 
-@media screen and (max-width: 400px) {
     .topnav a {
-        float: none;
-        width: 100%;
+
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
     }
-}
+
+    .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    .leftcolumn {
+        float: left;
+        width: 75%;
+    }
+
+    .rightcolumn {
+        float: left;
+        width: 25%;
+        background-color: #f1f1f1;
+        padding-left: 20px;
+    }
+
+    .fakeimg {
+        background-color: #aaa;
+        width: 100%;
+        padding: 20px;
+    }
+
+    .card {
+        background-color: white;
+        padding: 20px;
+        margin-top: 20px;
+    }
+
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+
+    }
+
+    .footer {
+        padding: 20px;
+        text-align: center;
+        background: #ddd;
+        margin-top: 20px;
+    }
+
+    @media (max-width: 800px) {
+        .about1 {
+            width: 100%;
+        }
+
+        @media screen and (max-width: 800px) {
+
+            .leftcolumn,
+            .rightcolumn {
+                width: 100%;
+                padding: 0;
+            }
+        }
+
+        @media screen and (max-width: 400px) {
+            .topnav a {
+                float: none;
+                width: 100%;
+            }
+        }
