--- a/css/project.css
+++ b/css/project.css
@@ -137,4 +137,12 @@ h1 {
 }
 
 
-@media (max-width:400px) {}
+@media (max-width: 800px) {
+
+    .unserteam {
+        margin-left: 0px;
+        display: table;
+    
+    }
+   
+}
