--- a/css/s_style.css
+++ b/css/s_style.css
@@ -158,6 +158,7 @@ body {
     .imgabout {
         margin-left: 0px;
         width: 50%;
+        height: 200px;
         margin-left: 30%;
 
     }
