homapage img responsive verbessert

--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,9 @@ span {
     .ptag {
         font-size: smaller;
     }
+    #prdkt{
+        height: 150px;
+    }
 }
 
 @media screen and (max-width: 400px) {
